--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -2,20 +2,20 @@
 
     <div class="carousel-inner" style="opacity:0.5;">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="/assets/images/salvador01.jpg" alt="First slide">
+            <img class="d-block w-100" src="assets/images/salvador01.jpg" alt="First slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="/assets/images/salvador02.jpg" alt="Second slide">
+            <img class="d-block w-100" src="assets/images/salvador02.jpg" alt="Second slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="/assets/images/salvador03.jpg" alt="Third slide">
+            <img class="d-block w-100" src="assets/images/salvador03.jpg" alt="Third slide">
         </div>
     </div>
     <div style="position:absolute; top: 10%; display: block; margin-left: auto;margin-right: auto; left: 38%; height: 20px; width: 20px;">
-            <a href="/" target="_blank"><img src="/assets/images/logo.png"></a>
+            <a href="/" target="_blank"><img src="assets/images/logo.png"></a>
     </div>
     <div style="position:absolute; top: 1%; left: 1%;">
-        <a href="http://www.sbc.org.br/" target="_blank"><img class="sbc" src="/assets/images/logo-sbc.png"></a>
+        <a href="http://www.sbc.org.br/" target="_blank"><img class="sbc" src="assets/images/logo-sbc.png"></a>
     </div>
 
 </div>
