--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
-    <a class="navbar-brand" href="/">X CBSOFT</a>
+    <a class="navbar-brand" href="index.html">X CBSOFT</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -13,7 +13,7 @@
                     SBES
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/eventos/sbes.html">About</a>
+                    <a class="dropdown-item" href="sbes.html">About</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
@@ -25,7 +25,7 @@
                     SBLP
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/eventos/sblp.html">About</a>
+                    <a class="dropdown-item" href="sblp.html">About</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
@@ -37,7 +37,7 @@
                     SBCARS
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/eventos/sbcars.html">About</a>
+                    <a class="dropdown-item" href="sbcars.html">About</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
@@ -49,7 +49,7 @@
                     SAST
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/eventos/sast.html">About</a>
+                    <a class="dropdown-item" href="sast.html">About</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
@@ -75,17 +75,17 @@
                     Venue & Location
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/venue_location.html">About</a>
+                    <a class="dropdown-item" href="venue_location.html">About</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/conference_banquet.html">Conference Banquet</a>
+                <a class="nav-link" href="conference_banquet.html">Conference Banquet</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/downloads.html">Downloads</a>
+                <a class="nav-link" href="downloads.html">Downloads</a>
             </li>
         </ul>
     </div>
