--- a/_layouts/padrao.html
+++ b/_layouts/padrao.html
@@ -4,6 +4,8 @@ layout: default
 <section class="sample-text-area">
 <div class="container">
 <div class="text-justify text-black">
+{% include data_evento.html %}
+<br>
 {{ content }}
 </div>
 </div>
