colocando a imagem responsiva

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -11,11 +11,11 @@
             <img class="d-block w-100" src="assets/images/salvador03.jpg" alt="Third slide">
         </div>
     </div>
-    <div style="position:absolute; top: 10%; display: block; margin-left: auto;margin-right: auto; left: 38%; height: 20px; width: 20px;">
-            <a href="/" target="_blank"><img src="assets/images/logo.png"></a>
+    <div style="position:absolute; top: 10%; display: block; margin-left: auto;margin-right: auto; width: 100%; height: 100%; text-align: center; vertical-align: 90%;">
+            <a href="/" target="_blank"><img style="width: 30%; max-width: 400px; height: auto;" src="assets/images/logo.png"></a>
     </div>
     <div style="position:absolute; top: 1%; left: 1%;">
-        <a href="http://www.sbc.org.br/" target="_blank"><img class="sbc" src="assets/images/logo-sbc.png"></a>
+        <a href="http://www.sbc.org.br/" target="_blank"><img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/logo-sbc.png"></a>
     </div>
 
 </div>
