--- a/_includes/organization.html
+++ b/_includes/organization.html
@@ -8,9 +8,9 @@
             </div>
             <div class="card-body">
                 <div class="text-justify text-black">
-                    <img style="max-height:100px; width: auto; height: auto; text-align: center;" src="assets/images/organization/icmc.png">
-                    <img style="max-height:100px; width: auto; height: auto; text-align: center;" src="assets/images/organization/LogoUFSCar.png">
-                    <img style="max-height:100px; width: auto; height: auto; text-align: center;" src="assets/images/organization/ifsp_sao_carlos.jpg">
+                    <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/icmc.png">
+                    <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/LogoUFSCar.png">
+                    <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/ifsp_sao_carlos.jpg">
                 </div>
             </div>
             <div class="card-header">
@@ -18,7 +18,7 @@
             </div>
             <div class="card-body">
                 <div class="text-justify text-black">
-                    <img style="max-height:100px; width: auto; height: auto;" src="assets/images/organization/logo-sbc2.png">
+                    <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/logo-sbc2.png">
                 </div>
             </div>
             <div class="card-header">
@@ -26,14 +26,14 @@
             </div>
             <div class="card-body">
                 <div class="text-justify text-black">
-                    <img style="max-height:100px; width: auto; height: auto;" src="assets/images/organization/logo_fapesp.png"
+                    <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/logo_fapesp.png"
                         alt="Fapesp"> </div>
             </div>
             <div class="card-body">
                 <div class="text-justify text-black">
-                    <img style="max-height:100px; width: auto; height: auto;" src="assets/images/organization/logo-capes.png">
-                    <img style="max-height:100px; width: auto; height: auto;" src="assets/images/organization/Faber-Castell-logo.png">
-                    <img style="max-height:100px; width: auto; height: auto;" src="assets/images/organization/prefeituraSaoCarlos.png">
+                    <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/logo-capes.png">
+                    <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/Faber-Castell-logo.png">
+                    <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/prefeituraSaoCarlos.png">
                 </div>
             </div>
             <div class="card-header">
@@ -41,16 +41,16 @@
             </div>
             <div class="card-body">
                 <div class="text-justify text-black">
-                    <img style="max-height:100px; width: auto; height: auto;" src="assets/images/organization/google-logo.png"
+                    <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/google-logo.png"
                         alt="Google">
-                    <img style="max-height:100px; width: auto; height: auto;" src="assets/images/organization/B2Wlogo.png"
+                    <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/B2Wlogo.png"
                         alt="B2W">
-                    <img style="max-height:100px; width: auto; height: auto;" src="assets/images/organization/cemeAI.png"
+                    <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/cemeAI.png"
                         alt="cemeAI">
                 </div>
                 <div class="card-body">
                     <div class="text-justify text-black">
-                        <img style="max-height:100px; width: auto; height: auto;" src="assets/images/organization/logo-monitora.png"
+                        <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/logo-monitora.png"
                             alt="Monitora">
                     </div>
                 </div>
