--- a/_includes/data_evento.html
+++ b/_includes/data_evento.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="card text-center">
             <div class="card-header">
-                <h2 class="section-title">
+                <h2 style="font-size:5vmin;">
                     23th - 27th September, 2019
                 </h2>
             </div>
