--- a/_includes/organization.html
+++ b/_includes/organization.html
@@ -21,7 +21,7 @@
                     <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/logo-sbc2.png">
                 </div>
             </div>
-            <div class="card-header">
+            <!-- <div class="card-header">
                 <h3 class="section-title">Support</h3>
             </div>
             <div class="card-body">
@@ -30,8 +30,8 @@
                     <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/Faber-Castell-logo.png">
                     <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/prefeituraSaoCarlos.png">
                 </div>
-            </div>
-            <div class="card-header">
+            </div> -->
+            <!-- <div class="card-header">
                 <h3 class="section-title">Sponsor</h3>
             </div>
             <div class="card-body">
@@ -49,7 +49,7 @@
                             alt="Monitora">
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
