melhorias no template e adicionando a fita

--- a/_layouts/padrao.html
+++ b/_layouts/padrao.html
@@ -4,7 +4,7 @@ layout: default
 <section class="sample-text-area">
 <div class="container">
 <div class="text-justify text-black">
-{% include data_evento.html %}
+
 <br>
 {{ content }}
 </div>
@@ -14,3 +14,4 @@ layout: default
 {% include organization.html %}
 <br><br>
 {% include codeofconduct.html %}
+{{page.title}}
