--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -14,6 +14,7 @@
     <div style="position:absolute; top: 10%; display: block; margin-left: auto;margin-right: auto; width: 100%; height: 100%; text-align: center; vertical-align: 90%;">
             <a href="/" target="_blank"><img style="width: 30%; max-width: 400px; height: auto;" src="assets/images/logo.png"></a>
     </div>
+    {% include data_evento.html %}
     <div style="position:absolute; top: 1%; left: 1%;">
         <a href="http://www.sbc.org.br/" target="_blank"><img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/logo-sbc.png"></a>
     </div>
