--- a/_includes/data_evento.html
+++ b/_includes/data_evento.html
@@ -1,11 +1,3 @@
-<section class="sample-text-area">
-    <div class="container">
-        <div class="card text-center">
-            <div class="card-header">
-                <h2 style="font-size:5vmin;">
-                    23th - 27th September, 2019
-                </h2>
-            </div>
-        </div>
-    </div>
-</section>
+<div style="position:absolute; top: 84%; display: block; margin-left: auto;margin-right: auto; width: 100%; height: 100%; text-align: center; vertical-align: 90%;">
+        <img style="width: 100%; max-width: 600px; height: auto;" src="assets/images/fita.png">
+</div>
