--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <section id="contact" style="background: #313234; color: white !important; align-content: center; text-align: center;">
   <div class="col-md-12">
     <h2 class="section-title"><span translate="CONTACT" class="">Contact</span></h2>
-    <span style="">cbsoft2019@gmail.com</span>
+    <span>{{site.email}}</span>
   </div>
   <div class="col-md-12">
     <div class="wrapper" id="copyright">
