adicionando suporte a utf-8

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div style="position:absolute; top: 10%; display: block; margin-left: auto;margin-right: auto; width: 100%; height: 100%; text-align: center; vertical-align: 90%;">
-            <a href="/" target="_blank"><img style="width: 30%; max-width: 400px; height: auto;" src="assets/images/logo.png"></a>
+            <a href="index.html" ><img style="width: 30%; max-width: 400px; height: auto;" src="assets/images/logo.png"></a>
     </div>
     {% include data_evento.html %}
     <div style="position:absolute; top: 1%; left: 1%;">
