alterando as logos

--- a/_includes/organization.html
+++ b/_includes/organization.html
@@ -7,21 +7,25 @@
                 <h3 class="section-title">Organization</h3>
             </div>
             <div class="card-body">
-                <div class="text-justify text-black">
-                    <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/icmc.png">
-                    <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/LogoUFSCar.png">
-                    <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/ifsp_sao_carlos.jpg">
+                <div class="text-black d-flex justify-content-around" style="height: 120px;">
+                    <img style="height: 100%; width: auto;" src="assets/images/organization/logo_ufba.png">
+                    <img style="height: 100%;  width: auto;" src="assets/images/organization/logo_ime_50.png">
+                    <img style="height: 100%; width: auto;" src="assets/images/organization/logo_comp.png">
                 </div>
             </div>
+        </div>
+        <br/>
+        <div class="card text-center">
             <div class="card-header">
                 <h3 class="section-title">Promotion</h3>
             </div>
             <div class="card-body">
-                <div class="text-justify text-black">
-                    <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/logo-sbc2.png">
+                <div class="text-black d-flex justify-content-around" style="height: 120px;">
+                    <img style="height: 100%; width: auto;" src="assets/images/organization/logo-sbc2.png">
                 </div>
             </div>
-            <!-- <div class="card-header">
+        </div>
+        <!-- <div class="card-header">
                 <h3 class="section-title">Support</h3>
             </div>
             <div class="card-body">
@@ -31,7 +35,7 @@
                     <img style="width: 100%; max-width: 100px; height: auto;" src="assets/images/organization/prefeituraSaoCarlos.png">
                 </div>
             </div> -->
-            <!-- <div class="card-header">
+        <!-- <div class="card-header">
                 <h3 class="section-title">Sponsor</h3>
             </div>
             <div class="card-body">
@@ -50,6 +54,6 @@
                     </div>
                 </div>
             </div> -->
-        </div>
+    </div>
     </div>
 </section>
