--- a/_includes/organization.html
+++ b/_includes/organization.html
@@ -8,20 +8,28 @@
             </div>
             <div class="card-body">
                 <div class="text-black d-flex justify-content-around" style="height: 120px;">
-                    <img style="height: 100%; width: auto;" src="assets/images/organization/logo_ufba.png">
-                    <img style="height: 100%;  width: auto;" src="assets/images/organization/logo_ime_50.png">
-                    <img style="height: 100%; width: auto;" src="assets/images/organization/logo_comp.png">
+                    <a href="https://ufba.br/" target="_blank">
+                        <img style="height: 100%; width: auto;" src="assets/images/organization/logo_ufba.png">
+                    </a>
+                    <a href="http://ime.ufba.br/" target="_blank">
+                        <img style="height: 100%;  width: auto;" src="assets/images/organization/ime_brasao.png">
+                    </a>
+                    <a href="http://wiki.dcc.ufba.br/DCC/" target="_blank">
+                        <img style="height: 100%; width: auto;" src="assets/images/organization/logo_comp.png">
+                    </a>
                 </div>
             </div>
         </div>
-        <br/>
+        <br />
         <div class="card text-center">
             <div class="card-header">
                 <h3 class="section-title">Promotion</h3>
             </div>
             <div class="card-body">
                 <div class="text-black d-flex justify-content-around" style="height: 120px;">
-                    <img style="height: 100%; width: auto;" src="assets/images/organization/logo-sbc2.png">
+                    <a href="http://www.sbc.org.br/" target="_blank">
+                        <img style="height: 100%; width: auto;" src="assets/images/organization/logo-sbc2.png">
+                    </a>
                 </div>
             </div>
         </div>
