--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,7 +11,7 @@
                     <font style="color: red; font-weight: bold;">X</font> CBSOFT
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="index.html">Home CBSOFT</a>
+                    <a class="dropdown-item" href="index">Home CBSOFT</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
@@ -23,7 +23,7 @@
                     <font style="color: red; font-weight: bold;">XXXIII</font> SBES
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="sbes.html">Home SBES</a>
+                    <a class="dropdown-item" href="sbes">Home SBES</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
@@ -35,7 +35,7 @@
                     <font style="color: red; font-weight: bold;">XXIII</font> SBLP
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="sblp.html">Home SBLP</a>
+                    <a class="dropdown-item" href="sblp">Home SBLP</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
@@ -47,7 +47,7 @@
                     <font style="color: red; font-weight: bold;">XIII</font> SBCARS
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="sbcars.html">Home SBCARS</a>
+                    <a class="dropdown-item" href="sbcars">Home SBCARS</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
@@ -59,7 +59,7 @@
                     <font style="color: red; font-weight: bold;">IV</font> SAST
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="sast.html">Home SAST</a>
+                    <a class="dropdown-item" href="sast">Home SAST</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
@@ -85,17 +85,17 @@
                     Venue & Location
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="venue_location.html">About</a>
+                    <a class="dropdown-item" href="venuelocation">About</a>
                     <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="conference_banquet.html">Conference Banquet</a>
+                <a class="nav-link" href="conferencebanquet">Conference Banquet</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="downloads.html">Downloads</a>
+                <a class="nav-link" href="downloads">Downloads</a>
             </li>
         </ul>
     </div>
