--- a/_includes/organization.html
+++ b/_includes/organization.html
@@ -7,13 +7,15 @@
                 <h3 class="section-title">Organization</h3>
             </div>
             <div class="card-body">
-                <div class="text-black d-flex justify-content-around" style="height: 120px;">
+                <div class="justify-content-around" style="height: 120px;">
                     <a href="https://ufba.br/" target="_blank">
                         <img style="height: 100%; width: auto;" src="assets/images/organization/logo_ufba.png">
                     </a>
+                    &ensp;&ensp;&ensp;
                     <a href="http://ime.ufba.br/" target="_blank">
                         <img style="height: 100%;  width: auto;" src="assets/images/organization/ime_brasao.png">
                     </a>
+                    &ensp;&ensp;&ensp;
                     <a href="http://wiki.dcc.ufba.br/DCC/" target="_blank">
                         <img style="height: 100%; width: auto;" src="assets/images/organization/logo_comp.png">
                     </a>
