alteranção do logo

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,11 +11,27 @@
                     <font style="color: red; font-weight: bold;">X</font> CBSOFT
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="index.html">Home CBSOFT</a>
-                    <a class="dropdown-item" href="cbsoft_committe.html">Committee</a>
+                    <a class="dropdown-item" href="index.html">Home</a>
                     <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="cbsoft_committe.html">Organization</a>
+                    <a class="dropdown-item" href="cbsoft_registration.html">Registration</a>
+                    <a class="dropdown-item" href="#">Conference Program</a>
+                    <a class="dropdown-item" href="#">Conference Proceedings</a>
+                    <a class="dropdown-item" href="#">Industry Track</a>
+                    <a class="dropdown-item" href="#">Tutorials</a>
+                    <a class="dropdown-item" href="#">Short courses</a>
+                    <a class="dropdown-item" href="#">Workshops</a>
+                    <a class="dropdown-item" href="#">Tools Session</a>
+                    <a class="dropdown-item" href="#">WTDSoft</a>
+                    <a class="dropdown-item" href="#">Previous Editions</a>
+                    <a class="dropdown-item" href="#">Promotion, organization, and support</a>
+                    <a class="dropdown-item" href="#">Code of Conduct</a>
+                    <a class="dropdown-item" href="#">Contacts</a>
+                    
+                    
                     <a class="dropdown-item" href="#">Something else here</a>
                 </div>
+                
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -24,9 +40,11 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="sbes.html">Home SBES</a>
-                    <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Research Track</a>
+                    <a class="dropdown-item" href="#">Insightful Ideas & Emerging Results Track</a>
+                    <a class="dropdown-item" href="#">Education Track</a>
+                    <a class="dropdown-item" href="#">Keynotes</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -36,9 +54,11 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="sblp.html">Home SBLP</a>
-                    <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Call for Papers</a>
+                    <a class="dropdown-item" href="#">SBLP - Program Committee</a>
+                    <a class="dropdown-item" href="#">Invited Speakers</a>
+                    <a class="dropdown-item" href="#">Contact</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -48,9 +68,14 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="sbcars.html">Home SBCARS</a>
-                    <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Best Paper Award and Special Issue</a>
+                    <a class="dropdown-item" href="#">Call for Papers</a>
+                    <a class="dropdown-item" href="#">Keynote Speakers</a>
+                    <a class="dropdown-item" href="#">Schedule</a>
+                    <a class="dropdown-item" href="#">Organization</a>
+                    <a class="dropdown-item" href="#">SBCARS - Program Committee</a>
+                    <a class="dropdown-item" href="#">Contact</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -60,9 +85,9 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="sast.html">Home SAST</a>
-                    <a class="dropdown-item" href="#">Another action</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Call for Papers</a>
+                    <a class="dropdown-item" href="#">Keynote Speakers</a>
                 </div>
             </li>
 
@@ -80,16 +105,9 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link" href="venue_location.html">
                     Venue & Location
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="venue_location.html">About</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="conference_banquet.html">Conference Banquet</a>
