--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,7 +1,10 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
 
-    <div class="carousel-inner" style="opacity:0.5;">
+    <div class="carousel-inner" style="opacity:0.4;">
         <div class="carousel-item active">
+            <img class="d-block w-100" src="assets/images/salvador00.jpg" alt="Zero slide">
+        </div>
+        <div class="carousel-item">
             <img class="d-block w-100" src="assets/images/salvador01.jpg" alt="First slide">
         </div>
         <div class="carousel-item">
@@ -11,10 +14,10 @@
             <img class="d-block w-100" src="assets/images/salvador03.jpg" alt="Third slide">
         </div>
     </div>
-    <div style="position:absolute; top: 10%; display: block; margin-left: auto;margin-right: auto; width: 100%; height: 100%; text-align: center; vertical-align: 90%;">
+    <div style="position:absolute; top: 5%; display: block; margin-left: auto;margin-right: auto; width: 100%; height: 100%; text-align: center; vertical-align: 90%;">
             <a href="index.html" ><img style="width: 30%; max-width: 400px; height: auto;" src="assets/images/logo.png"></a>
     </div>
-    {% include data_evento.html %}
+    
     <div style="position:absolute; top: 1%; left: 1%;">
         <a href="http://www.sbc.org.br/" target="_blank"><img style="width: 100%; max-width: 120px; height: auto;" src="assets/images/logo-sbc.png"></a>
     </div>
