--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -14,8 +14,8 @@
             <img class="d-block w-100" src="assets/images/salvador03.jpg" alt="Third slide">
         </div>
     </div>
-    <div style="position:absolute; top: 5%; display: block; margin-left: auto;margin-right: auto; width: 100%; height: 100%; text-align: center; vertical-align: 90%;">
-            <a href="index.html" ><img style="width: 30%; max-width: 400px; height: auto;" src="assets/images/logo.png"></a>
+    <div style="position:absolute; top: 0%; display: block; margin-left: auto;margin-right: auto; width: 100%; height: 100%; text-align: center; vertical-align: 90%;">
+            <a href="index.html" ><img style="width: 30%; max-width: auto; height: 100%;" src="assets/images/logo.png"></a>
     </div>
     
     <div style="position:absolute; top: 1%; left: 1%;">
