--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -55,10 +55,13 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="sblp.html">Home SBLP</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Call for Papers</a>
-                    <a class="dropdown-item" href="#">SBLP - Program Committee</a>
-                    <a class="dropdown-item" href="#">Invited Speakers</a>
-                    <a class="dropdown-item" href="#">Contact</a>
+                    <a class="dropdown-item" href="sblp.html#submission-guidelines">Submission Guidelines</a>
+                    <a class="dropdown-item" href="sblp.html#list-of-topics">List of Topics</a>
+                    <a class="dropdown-item" href="sblp.html#publication">Publication</a>
+                    <a class="dropdown-item" href="sblp.html#important-dates">Important dates</a>
+                    <a class="dropdown-item" href="sblp.html#program-committee">Program Committee</a>
+                    <a class="dropdown-item" href="sblp.html#invited-speaker">Invited Speaker</a>
+                    <a class="dropdown-item" href="sblp.html#contact">Contact</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
