--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -15,11 +15,20 @@
         </div>
     </div>
     <div style="position:absolute; top: 8%; display: block; margin-left: auto;margin-right: auto; width: 100%; height: 100%; text-align: center; vertical-align: 90%;">
-            <a href="index.html" ><img style="max-width: auto; height: 78%;" src="assets/images/logo.png"></a>
+        <a href="index.html"><img style="max-width: auto; height: 78%;" src="assets/images/logo.png"></a>
     </div>
-    
+
     <div style="position:absolute; top: 1%; left: 1%;">
         <a href="http://www.sbc.org.br/" target="_blank"><img style="width: 100%; max-width: 120px; height: auto;" src="assets/images/logo-sbc.png"></a>
+    </div>
+
+    <div style="position:absolute; top: 1%; right: 1%;">
+        <a href="/pt/index.html" style="background-color: white; color: green;">
+            <img src="https://cdn.countryflags.com/thumbs/brazil/flag-400.png" style="height: 30px;">
+        </a>
+        <a href="/index.html">
+            <img src="https://cdn.countryflags.com/thumbs/united-states-of-america/flag-800.png" style="height: 30px;">
+        </a>
     </div>
 
 </div>
