--- a/_includes/pt/footer.html
+++ b/_includes/pt/footer.html
@@ -1,6 +1,6 @@
 <section id="contact" style="background: #313234; color: white !important; align-content: center; text-align: center;">
   <div class="col-md-12">
-    <h2 class="section-title"><span translate="CONTACT" class="">Contact</span></h2>
+    <h2 class="section-title"><span translate="CONTACT" class="">Contato</span></h2>
 
     <a class="btn btn-social-icon btn-twitter" style="background-color: red;" target="_blank" href="mailto:{{site.email}}">
       <span class="fa fa-envelope"></span>
