--- a/_includes/pt/carousel.html
+++ b/_includes/pt/carousel.html
@@ -23,11 +23,8 @@
     </div>
 
     <div style="position:absolute; top: 1%; right: 1%;">
-        <a href="/pt/index.html" style="background-color: white; color: green;">
-            <img src="https://cdn.countryflags.com/thumbs/brazil/flag-400.png" style="height: 30px;">
-        </a>
         <a href="/index.html">
-            <img src="https://cdn.countryflags.com/thumbs/united-states-of-america/flag-800.png" style="height: 30px;">
+            <img src="https://cdn.countryflags.com/thumbs/united-states-of-america/flag-800.png" style="height: 30px;width: 45px;">
         </a>
     </div>
 
