--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -23,13 +23,11 @@
                     <a class="dropdown-item" href="#">Workshops</a>
                     <a class="dropdown-item" href="#">Tools Session</a>
                     <a class="dropdown-item" href="#">WTDSoft</a>
-                    <a class="dropdown-item" href="#">Previous Editions</a>
+                    <a class="dropdown-item" href="cbsoft_previous_editions.html">Previous Editions</a>
                     <a class="dropdown-item" href="#">Promotion, organization, and support</a>
                     <a class="dropdown-item" href="#">Code of Conduct</a>
                     <a class="dropdown-item" href="#">Contacts</a>
-                    
-                    
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Promotional Material</a>
                 </div>
                 
             </li>
