--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -27,7 +27,7 @@
                     <a class="dropdown-item" href="#">Promotion, organization, and support</a>
                     <a class="dropdown-item" href="#">Code of Conduct</a>
                     <a class="dropdown-item" href="#">Contacts</a>
-                    <a class="dropdown-item" href="#">Promotional Material</a>
+                    <a class="dropdown-item" href="cbsoft_material.html">Promotional Material</a>
                 </div>
                 
             </li>
@@ -113,9 +113,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="conference_banquet.html">Conference Banquet</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="downloads.html">Downloads</a>
-            </li>
+            </li> -->
         </ul>
     </div>
 </nav>
