--- a/_includes/codeofconduct.html
+++ b/_includes/codeofconduct.html
@@ -1,4 +1,4 @@
-<section class="sample-text-area">
+<section class="sample-text-area" id="code">
     <div class="container">
         <div class="card text-center">
             <div class="card-header">
