--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,18 +15,18 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="cbsoft_committe.html">Organization</a>
                     <a class="dropdown-item" href="cbsoft_registration.html">Registration</a>
-                    <a class="dropdown-item" href="#">Conference Program</a>
-                    <a class="dropdown-item" href="#">Conference Proceedings</a>
-                    <a class="dropdown-item" href="#">Industry Track</a>
-                    <a class="dropdown-item" href="#">Tutorials</a>
-                    <a class="dropdown-item" href="#">Short courses</a>
-                    <a class="dropdown-item" href="#">Workshops</a>
-                    <a class="dropdown-item" href="#">Tools Session</a>
-                    <a class="dropdown-item" href="#">WTDSoft</a>
+                    <a class="dropdown-item" href="cbsoft_conference_program.html">Conference Program</a>
+                    <a class="dropdown-item" href="cbsoft_conference_proceedings.html">Conference Proceedings</a>
+                    <a class="dropdown-item" href="cbsoft_industry_track.html">Industry Track</a>
+                    <a class="dropdown-item" href="cbsoft_tutorials.html">Tutorials</a>
+                    <a class="dropdown-item" href="cbsoft_short_courses.html">Short Courses</a>
+                    <a class="dropdown-item" href="cbsoft_workshops.html">Workshops</a>
+                    <a class="dropdown-item" href="cbsoft_tools_session.html">Tools Session</a>
+                    <a class="dropdown-item" href="cbsoft_wtdsoft.html">WTDSoft</a>
                     <a class="dropdown-item" href="cbsoft_previous_editions.html">Previous Editions</a>
-                    <a class="dropdown-item" href="#">Promotion, organization, and support</a>
-                    <a class="dropdown-item" href="#">Code of Conduct</a>
-                    <a class="dropdown-item" href="#">Contacts</a>
+                    <a class="dropdown-item" href="index.html#promotion">Promotion, Organization, and Support</a>
+                    <a class="dropdown-item" href="index.html#code">Code of Conduct</a>
+                    <a class="dropdown-item" href="cbsoft_contacts.html">Contacts</a>
                     <a class="dropdown-item" href="cbsoft_material.html">Promotional Material</a>
                 </div>
                 
