--- a/_includes/organization.html
+++ b/_includes/organization.html
@@ -1,4 +1,5 @@
-<section class="m-b--10p" id="promotion" style="text-align: center;">
+<div id="promotion" ></div>
+<section class="m-b--10p" style="text-align: center;" >
     <hr>
     <div class="container">
 
