--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -39,10 +39,10 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="sbes.html">Home SBES</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Research Track</a>
-                    <a class="dropdown-item" href="#">Insightful Ideas & Emerging Results Track</a>
-                    <a class="dropdown-item" href="#">Education Track</a>
-                    <a class="dropdown-item" href="#">Keynotes</a>
+                    <a class="dropdown-item" href="sbes.html#research">Research Track</a>
+                    <a class="dropdown-item" href="sbes.html#insightful">Insightful Ideas & Emerging Results Track</a>
+                    <a class="dropdown-item" href="sbes.html#education">Education Track</a>
+                    <a class="dropdown-item" href="sbes.html#keynotes">Keynotes</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -70,13 +70,13 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="sbcars.html">Home SBCARS</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Best Paper Award and Special Issue</a>
-                    <a class="dropdown-item" href="#">Call for Papers</a>
-                    <a class="dropdown-item" href="#">Keynote Speakers</a>
-                    <a class="dropdown-item" href="#">Schedule</a>
-                    <a class="dropdown-item" href="#">Organization</a>
-                    <a class="dropdown-item" href="#">SBCARS - Program Committee</a>
-                    <a class="dropdown-item" href="#">Contact</a>
+                    <a class="dropdown-item" href="sbcars.html#best-paper-award-and-special-issue">Best Paper Award and Special Issue</a>
+                    <a class="dropdown-item" href="sbcars.html#call-for-papers">Call for Papers</a>
+                    <a class="dropdown-item" href="sbcars.html#keynote-speakers">Keynote Speakers</a>
+                    <a class="dropdown-item" href="sbcars.html#schedule">Schedule</a>
+                    <a class="dropdown-item" href="sbcars.html#organization">Organization</a>
+                    <a class="dropdown-item" href="sbcars.html#sbcars---program-committee">SBCARS - Program Committee</a>
+                    <a class="dropdown-item" href="sbcars.html#contact">Contact</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -87,8 +87,8 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="sast.html">Home SAST</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Call for Papers</a>
-                    <a class="dropdown-item" href="#">Keynote Speakers</a>
+                    <a class="dropdown-item" href="sast.html#call-for-papers">Call for Papers</a>
+                    <a class="dropdown-item" href="sast.html#keynote-speakers">Keynote Speakers</a>
                 </div>
             </li>
 
