add informações da wtdsoft

--- a/_includes/pt/navbar.html
+++ b/_includes/pt/navbar.html
@@ -13,23 +13,21 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="index.html">Home</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="cbsoft_committe.html">Organização</a>
-                    <a class="dropdown-item" href="cbsoft_registration.html">Cadastro</a>
-                    <a class="dropdown-item" href="#">Programa da Conferência</a>
-                    <a class="dropdown-item" href="#">Anais da Conferência</a>
-                    <a class="dropdown-item" href="#">Trilha da Indústria</a>
-                    <a class="dropdown-item" href="#">Tutoriais</a>
-                    <a class="dropdown-item" href="#">Short courses</a>
-                    <a class="dropdown-item" href="#">Workshops</a>
-                    <a class="dropdown-item" href="#">Tools Session</a>
-                    <a class="dropdown-item" href="#">WTDSoft</a>
-                    <a class="dropdown-item" href="#">Previous Editions</a>
-                    <a class="dropdown-item" href="#">Promotion, organization, and support</a>
-                    <a class="dropdown-item" href="#">Code of Conduct</a>
-                    <a class="dropdown-item" href="#">Contacts</a>
-                    
-                    
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="cbsoft_committe.html">Organization</a>
+                    <a class="dropdown-item" href="cbsoft_registration.html">Registration</a>
+                    <a class="dropdown-item" href="cbsoft_conference_program.html">Conference Program</a>
+                    <a class="dropdown-item" href="cbsoft_conference_proceedings.html">Conference Proceedings</a>
+                    <a class="dropdown-item" href="cbsoft_industry_track.html">Industry Track</a>
+                    <a class="dropdown-item" href="cbsoft_tutorials.html">Tutorials</a>
+                    <a class="dropdown-item" href="cbsoft_short_courses.html">Short Courses</a>
+                    <a class="dropdown-item" href="cbsoft_workshops.html">Workshops</a>
+                    <a class="dropdown-item" href="cbsoft_tools_session.html">Tools Session</a>
+                    <a class="dropdown-item" href="cbsoft_wtdsoft.html">WTDSoft</a>
+                    <a class="dropdown-item" href="cbsoft_previous_editions.html">Previous Editions</a>
+                    <a class="dropdown-item" href="index.html#promotion">Promotion, Organization, and Support</a>
+                    <a class="dropdown-item" href="index.html#code">Code of Conduct</a>
+                    <a class="dropdown-item" href="cbsoft_contacts.html">Contacts</a>
+                    <a class="dropdown-item" href="cbsoft_material.html">Promotional Material</a>
                 </div>
                 
             </li>
@@ -41,10 +39,10 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="sbes.html">Home SBES</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Research Track</a>
-                    <a class="dropdown-item" href="#">Insightful Ideas & Emerging Results Track</a>
-                    <a class="dropdown-item" href="#">Education Track</a>
-                    <a class="dropdown-item" href="#">Keynotes</a>
+                    <a class="dropdown-item" href="sbes.html#research">Research Track</a>
+                    <a class="dropdown-item" href="sbes.html#insightful">Insightful Ideas & Emerging Results Track</a>
+                    <a class="dropdown-item" href="sbes.html#education">Education Track</a>
+                    <a class="dropdown-item" href="sbes.html#keynotes">Keynotes</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -72,13 +70,13 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="sbcars.html">Home SBCARS</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Best Paper Award and Special Issue</a>
-                    <a class="dropdown-item" href="#">Call for Papers</a>
-                    <a class="dropdown-item" href="#">Keynote Speakers</a>
-                    <a class="dropdown-item" href="#">Schedule</a>
-                    <a class="dropdown-item" href="#">Organization</a>
-                    <a class="dropdown-item" href="#">SBCARS - Program Committee</a>
-                    <a class="dropdown-item" href="#">Contact</a>
+                    <a class="dropdown-item" href="sbcars.html#best-paper-award-and-special-issue">Best Paper Award and Special Issue</a>
+                    <a class="dropdown-item" href="sbcars.html#call-for-papers">Call for Papers</a>
+                    <a class="dropdown-item" href="sbcars.html#keynote-speakers">Keynote Speakers</a>
+                    <a class="dropdown-item" href="sbcars.html#schedule">Schedule</a>
+                    <a class="dropdown-item" href="sbcars.html#organization">Organization</a>
+                    <a class="dropdown-item" href="sbcars.html#sbcars---program-committee">SBCARS - Program Committee</a>
+                    <a class="dropdown-item" href="sbcars.html#contact">Contact</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -89,8 +87,8 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="sast.html">Home SAST</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Call for Papers</a>
-                    <a class="dropdown-item" href="#">Keynote Speakers</a>
+                    <a class="dropdown-item" href="sast.html#call-for-papers">Call for Papers</a>
+                    <a class="dropdown-item" href="sast.html#keynote-speakers">Keynote Speakers</a>
                 </div>
             </li>
 
@@ -109,15 +107,15 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link" href="venue_location.html">
-                    Local & Localização
+                    Venue & Location
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="conference_banquet.html">Banquete de Conferências</a>
+                <a class="nav-link" href="conference_banquet.html">Conference Banquet</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="downloads.html">Downloads</a>
-            </li>
+            </li> -->
         </ul>
     </div>
 </nav>
