retirando o menu workshop até haver informações a colocar.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -92,19 +92,19 @@
                 </div>
             </li>
 
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     Workshops
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <!-- <a class="dropdown-item" href="https://vem2018.github.io" target="_blank">Workshop on Software
+                    <a class="dropdown-item" href="https://vem2018.github.io" target="_blank">Workshop on Software
                         Visualization, Evolution and Maintenance</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="http://wesb2018.dainf.ct.utfpr.edu.br/index-en.html" target="_blank">Workshop
-                        on Search-based Software Engineering</a> -->
+                        on Search-based Software Engineering</a>
                 </div>
-            </li>
+            </li> -->
             <li class="nav-item dropdown">
                 <a class="nav-link" href="venue_location.html">
                     Venue & Location
